Added basic wall drawing

--- a/mapper/src/main/res/layout/fragment_mapping.xml
+++ b/mapper/src/main/res/layout/fragment_mapping.xml
@@ -4,6 +4,7 @@
              android:layout_height="match_parent">
 
     <com.crazydude.indoortracker.views.MapperView
+        android:id="@+id/mapper_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
