Added wifi point mapping view mode

--- a/mapper/src/main/res/layout/fragment_mapping.xml
+++ b/mapper/src/main/res/layout/fragment_mapping.xml
@@ -8,4 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:id="@+id/map_point_button"
+        android:text="@string/map_point"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </FrameLayout>
