--- a/mapper/src/main/res/layout/fragment_mapping.xml
+++ b/mapper/src/main/res/layout/fragment_mapping.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent">
 
     <com.crazydude.indoortracker.views.MapperView
         android:id="@+id/mapper_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <Button
-        android:id="@+id/map_point_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:text="@string/map_point"/>
-
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
